# guipy

./: README.md  pyproject.toml
.github/workflows/: deploy.yml  docs.yml
docs/getting_started/: overview.rst  starting.rst
guipy/: __init__.py  manager.py  utils.py
guipy/backend/: __init__.py  _draw.py  _events.py  _font.py  _gpu.py  _rect.py  _renderer.py  _shaders.py  _surface.py  _transform.py
guipy/components/: _component.py  button.py  menu.py  plot.py  slider.py  switch.py  textbox.py
tests/: button_test.py  liveplot_test.py  menu_test.py  plot_test.py  slider_test.py  switch_test.py  textbox_test.py
